kubernetes/datree/manifests/datree.0.1.46-enforce.yaml
---
# Source: datree-admission-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datree-webhook-server
  namespace: datree
  labels: 
    app.kubernetes.io/name: datree-admission-webhook
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "datree-webhook"
    app.kubernetes.io/version: 0.1.41
    app.kubernetes.io/part-of: "datree"
    meta.helm.sh/release-name: "datree-admission-webhook"
    meta.helm.sh/release-namespace: "datree" 
    helm.sh/chart: datree-admission-webhook-0.3.22
spec:
  selector:
    app: "datree-webhook-server"
  ports:
    - port: 443
      targetPort: webhook-api
---
# Source: datree-admission-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datree-webhook-server
  namespace: datree
  labels: 
    app.kubernetes.io/name: datree-admission-webhook
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "datree-webhook"
    app.kubernetes.io/version: 0.1.41
    app.kubernetes.io/part-of: "datree"
    meta.helm.sh/release-name: "datree-admission-webhook"
    meta.helm.sh/release-namespace: "datree" 
    helm.sh/chart: datree-admission-webhook-0.3.22
    owner: datree
    app: "datree-webhook-server"
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: "datree-webhook-server"
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: datree-admission-webhook
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "datree-webhook"
        app.kubernetes.io/version: 0.1.41
        app.kubernetes.io/part-of: "datree"
        meta.helm.sh/release-name: "datree-admission-webhook"
        meta.helm.sh/release-namespace: "datree" 
        helm.sh/chart: datree-admission-webhook-0.3.22
        app: "datree-webhook-server"
    spec:
      serviceAccountName: datree-webhook-server
      containers:
        - name: server
          # caution: don't change the order of the environment variables
          # changing the order will harm resource patching
          securityContext: 
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 25000
          livenessProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            {}
          image: "datree/admission-webhook:0.1.41"
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: webhook-api
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
            - name: webhook-config
              mountPath: /config
              readOnly: true
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls
        - name: webhook-config
          configMap:
            name: webhook-scanning-filters
            optional: true
---
# Source: datree-admission-webhook/templates/webhook-with-cert-secrets.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: datree-webhook
  annotations:
    "helm.sh/hook": post-install, post-upgrade
    "helm.sh/hook-weight": "-5"
webhooks:
  - name: webhook-server.datree.svc
    sideEffects: None
    timeoutSeconds: 30
    failurePolicy: Ignore
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: datree-webhook-server
        namespace: datree
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lRQTZSWVVlb1BUQzRuc2dOQ3JWQXZBekFOQmdrcWhraUc5dzBCQVFzRkFEQXoKTVRFd0x3WURWUVFERXlndlEwNDlRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CTUI0WERUSXpNREV4TXpBeE1ESXdNbG9YRFRJNE1ERXhOREF4TURJd01sb3dNekV4TUM4R0ExVUVBeE1vCkwwTk9QVUZrYldsemMybHZiaUJEYjI1MGNtOXNiR1Z5SUZkbFltaHZiMnNnUkdWdGJ5QkRRVENDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0wyMWJ5RXUrT3o3OFU5dEE4WTNmWFQweDRTS29sNQpobnJEdzhHdExW [...]
    namespaceSelector:
      matchExpressions:
        - key: admission.datree/validate
          operator: DoesNotExist
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
